--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,9 @@ head img{
     padding-right: 50rem;
     padding-left: 50rem;
     padding-bottom: rem;
+
+    background-image: url("../Image/Imagem_capa.png");
+    background-size: border;    
 }
 
 html {
@@ -31,21 +34,30 @@ body{
     color: var(black)
 }
 
-header img{
-    padding-top: 20rem;
-    padding-right: 90rem;
+#titulo{
+    padding-top: 0rem;
+    padding-right: 10rem;
     padding-left: 10rem;
-    padding-bottom: rem;
-    z-index: 2;
-    background-image: url("../assets/Image/Imagem_capa.png");
-    background-size: cover;    
+    padding-bottom: 0rem;
 }
 
-header {
+header{
+    padding-top: 0rem;
+    padding-right: 80rem;
+    padding-left: 0rem;
+    padding-bottom: 0rem;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     height: 100vh;
+}
+
+header.imagem_um {
+    padding-top: 30rem;
+    padding-right: 0rem;
+    padding-left: 0rem;
+    padding-bottom: rem;
 }
 
 
