--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -39,13 +39,36 @@ html {
     height: 168px;
     left: 0px;
     top: 0px;
-    
     border: 1px solid #173043;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25); 
-    background-image: url("../Image/Imagem_capa.png");
-    background-size: cover;   
+    overflow: hidden;
+    position: relative;
 }
 
+#header::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-image: url("../Image/Imagem_capa.png");
+    background-size: cover;   
+   /* background-color: black;*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    animation: zoom 3s ease-out;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(1.5);
+    }
+
+    100%{
+        transform: scale(1.0);
+    }
+
+}
 
 #conteudo {
 
@@ -56,7 +79,6 @@ html {
     top: 6.75%;
     
     background: #FDFDE2;
-
 }
 
 #imagem_inicial{
@@ -81,7 +103,21 @@ html {
     line-height: 27px;
     letter-spacing: 0.11em;
     text-align: left;
+}
 
+.button{
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.133), rgba(0, 0, 0, 0.133)  );
+    padding: 1rem, 3rem;
+    border-radius: 7px;
+    color: var(--text-primary);
+    font-size: 2rem;
+    font-family: var(--fon-default);
+    text-decoration:(none);
+}
+
+.button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px #FDE2EF;    
 }
 
 .caixa_disco {
