--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -7,8 +7,16 @@ html {
     height: 250rem;
     left: 0rem;
     top: 0rem;
-
     background: linear-gradient(180deg, #F6CDE5 0%, rgba(244, 145, 89, 0) 100%);
+}
+
+body {
+    font-size: 62.5%;
+    position: relative;
+    width: 90rem;
+    height: 250rem;
+    left: 0rem;
+    top: 0rem;
 }
 
 :root{
@@ -120,6 +128,44 @@ html {
     left: 50rem;
 }
 
+#section-projects{
+    background-color: #212121;
+}
+
+#section-projects ul{
+    display: flex;
+    justify-content: space-around;
+    gap: 4rem;
+    margin-top: 2rem;
+
+}
+
+#section-projects li{
+    list-style: none;
+    position: relative;
+    cursor: pointer;
+
+}
+
+.card-image img{
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.card-info{
+    display: flex;
+    flex-direction: bottom;
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity .5s, botom .5s ;
+}
+
+#section-projects li:hover .card-info{
+    opacity: 1;
+}
+
 .primeiro_texto{
     font-family: Inter;
     font-size: 1.5rem;
@@ -176,7 +222,8 @@ html {
 
 #disco_1{
     position: relative;
-    top: -1.15rem;    
+    top: -0.7rem;  
+    cursor: pointer;  
 }
 
 #disco_1:hover + #vitrola1{
@@ -190,7 +237,8 @@ html {
 
 #disco_2{
     position: relative;
-    top: -1.15rem;    
+    top: -0.7rem;   
+    cursor: pointer; 
 }
 
 #disco_2:hover + #vitrola2{
@@ -204,7 +252,8 @@ html {
 
 #disco_3{
     position: relative;
-    top: -1.15rem;    
+    top: -0.7rem;
+    cursor: pointer;    
 }
 
 #disco_3:hover + #vitrola3{
@@ -218,7 +267,8 @@ html {
 
 #disco_4{
     position: relative;
-    top: -1.15rem;    
+    top: -0.7rem;
+    cursor: pointer;    
 }
 
 #disco_4:hover + #vitrola4{
