--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -7,7 +7,7 @@ html {
     height: 275rem;
     left: 0rem;
     top: 0rem;
-    background: linear-gradient(180deg, #F6CDE5 0%, rgba(244, 145, 89, 0) 100%);
+    background: #F6CDE5 100%;
 }
 
 body {
@@ -104,7 +104,7 @@ body {
 
     position: relative;
     width: 125rem;
-    height: 260rem;
+    height: 370rem;
     left: 12rem;
     top: -16rem;
     border-radius: 2.5rem;
@@ -137,7 +137,7 @@ body {
 
 #section-projects{
     background-color: #d20766;
-    top: 100rem ;
+    top: 110rem ;
     position: relative;
     border-radius: 2.5rem;
 
@@ -147,7 +147,7 @@ body {
     display: flex;
     justify-content: space-around;
     gap: 4rem;
-    margin-top: 19rem;
+    margin-top: 8rem;
 
 }
 
@@ -329,14 +329,6 @@ body {
     Left: 17.73rem;
 }
 
-/*.textinho{
-    Font: var(--fon-default);
-    Width: 331rem;
-    Height: 0rem;
-    Top: 27rem;
-    Left: 165rem;
-}*/
-
 #caixa1{
     position: relative;
     left: 5.73rem;
@@ -371,12 +363,47 @@ body {
 
 #momentos{
     position: relative;
-    /*padding: 1rem, 3rem;*/
-    border-radius: 7px;
     color: var(#0000);
     left: 8rem;
     font-size: 2rem;
     font-family: var(--font-heading);
     text-decoration:(none);
 
+}
+
+#section-budged{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 130rem;
+    position: relative;
+
+}
+
+#section-budged form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    background-color: #8C8C8C99;
+    backdrop-filter: blur(1px);
+    border-radius: 10px;
+    width: 80%;
+    padding: 2rem;
+    font-size: 3rem;
+}
+
+#section-budged form h4{
+    position: absolute;
+    top: -28%;
+    background-color: #6A3093;
+    padding: .3rem 2rem;
+    border-radius: 5px;
+    font-size: 3rem;
+    
+}
+
+#section-budged form output{
+    grid-column: 2;
 }
