--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -4,7 +4,7 @@ html {
     font-size: 62.5%;
     position: relative;
     width: 125rem;
-    height: 275rem;
+    height: 225rem;
     left: 0rem;
     top: 0rem;
     background: #F6CDE5 100%;
@@ -14,7 +14,7 @@ body {
     font-size: 62.5%;
     position: relative;
     width: 125rem;
-    height: 270rem;
+    height: 220rem;
     left: 0rem;
     top: 0rem;
 }
@@ -47,10 +47,11 @@ nav ul {
     align-items: center;
     display: flex;
     gap: 1rem;
-    right: -40rem;
-    background-color: white;
-    height: 100vh;
-    width: 20rem;
+    right: 0rem;
+    background-color: rgb(0, 0, 0);
+    top: -2rem;
+    height: 115vh;
+    width:10rem;
     z-index: 10;
     transition: right 1s;
 }
@@ -71,7 +72,7 @@ nav ul {
 #hamburguer .linha{
     width: 100%;
     height: .5rem;
-    background-color: white;
+    background-color: var(--text-primary) ;
     box-shadow: 0 .2rem .2rem #0000;
     border-radius: 0.2rem;
 }
@@ -86,11 +87,17 @@ nav ul {
 }
 
 #menu a:hover{
-    color: #6A3093;
+    color: var(--text-primary);
 }
 
 .menu-show{
-    right:0;
+    right:-40rem;
+}
+
+.menu_topic {
+    font-size: 1.5rem;
+ 
+    
 }
 
 #header {
@@ -427,7 +434,7 @@ nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 130rem;
+    top: 160rem;
     position: relative;
 
 }
