--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -40,6 +40,10 @@ body {
     z-index: 3;
 }
 
+header h1{
+    font-size: clamp(2rem, 5vw, 5rem);
+}
+
 nav ul {
     position: fixed;
     flex-direction: column;
@@ -54,6 +58,36 @@ nav ul {
     width:10rem;
     z-index: 10;
     transition: right 1s;
+}
+
+.loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.spin{
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    border: 16px solid #999;
+    border-top: 16px solid var(--text-primary);
+    animation: spin 5s infinite;
+}
+
+.hide{
+    display: none;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate (0deg);
+    }
+    100%{
+        transform: rotate (360deg);
+    }
 }
 
 #hamburguer{
@@ -465,4 +499,15 @@ nav ul {
 
 #section-budged form output{
     grid-column: 2;
+}
+
+@media (max-width: 980px){
+    #section-projects ul{
+        flex-direction: column;
+        /*
+    .large-only{
+        display: none;
+    }
+        */
+    }
 }
